--- a/app/views/communities/sections/electricity/capacity/_capacity_chart.html.haml
+++ b/app/views/communities/sections/electricity/capacity/_capacity_chart.html.haml
@@ -6,13 +6,12 @@
 / Wrapper for Stimulus controller
 #capacity-chart-wrapper{
   data: {
-    controller: "fuel-chart summary-frame",
+    controller: "fuel-chart widget-filter",
     fuel_chart: {
       url_value: capacity_yearly_community_charts_path(@community, year: selected_year),
       chart_type_value: "pie",
       base_title_value: base_title,
       options_value: chart_options.to_json,
-      
     }
   }
 }
@@ -20,13 +19,13 @@
     .d-flex.align-items-center.gap-2.mb-2
       %label.form-label.me-2.mb-0{ for: "capacity-year" } Year:
       %select#capacity-year.form-select.form-select-sm.w-auto{
-        data: { action: "change->fuel-chart#changeYear change->summary-frame#changeYear" }
+        data: { action: "change->fuel-chart#changeYear change->widget-filter#update" }
       }
         - years.each do |y|
           %option{ value: y, selected: y == selected_year }= y
 
   / Summary
-  %turbo-frame#capacity_summary{ data: { summary_frame_target: 'frame' }, src: capacity_community_summary_path(@community, year: selected_year)}
+  %turbo-frame#capacity_summary{ data: { widget_filter_target: 'frame' }, src: capacity_community_summary_path(@community, year: selected_year)}
     Loading summary ...
   / Chart
   #capacity-chart.responsive-fuel-chart{ data: { "fuel-chart-target": "chart" } }
