--- a/app/views/grids/index.html.haml
+++ b/app/views/grids/index.html.haml
@@ -1,4 +1,4 @@
-- content_for :title, "Grid Summaries"
+- content_for :title, "Explore Grids"
 
 .container-xl.mt-4
   .row.justify-content-center.mb-5
@@ -9,7 +9,7 @@
             .col-12.col-md-11.col-lg-10.bg-white.bg-opacity-75.p-4.rounded-4.shadow
               %h1.fw-bold.m-3
                 %i.bi.bi-grid.me-2
-                Grid Summaries
+                Explore Grids
 
               %p.lead.fs-5.w-75.mx-auto.mb-4
                 Explore grid-level insights, from communities served to energy metrics.
