reorder original colors

--- a/app/views/communities/sections/background/income/_household_income_distribution_chart.html.haml
+++ b/app/views/communities/sections/background/income/_household_income_distribution_chart.html.haml
@@ -11,14 +11,14 @@
   zeros:    true,
   ytitle:   "Household Income Brackets",
   colors:   [ color(:dark_blue),
-              color(:light_blue),
-              color(:dark_green),
-              color(:soft_green),
-              color(:medium_yellow),
               color(:orange),
+              color(:soft_green),
+              color(:dark_red),
+              color(:light_blue),
               color(:light_brown),
-              color(:dark_brown),
+              color(:dark_green),
               color(:light_red),
-              color(:dark_red)],
+              color(:medium_yellow),
+              color(:dark_brown)],
   download: { filename: hh_income_bracket_title.parameterize },
   library: { plugins: { legend: { display:true, position: 'right', reverse: true }, tooltip: { mode: 'index', intersect: false, reverse: true } }}
