--- a/app/views/communities/sections/electricity/_sales.html.haml
+++ b/app/views/communities/sections/electricity/_sales.html.haml
@@ -3,8 +3,6 @@
   %h4#sales.mb-0.me-3.py-3.anchor-offset Sales
   %hr.flex-grow-1.mt-1.mb-0
 
--# - latest_sale = @community.reporting_entity.latest_sale
--# - latest_year = latest_sale.year
 = render "communities/sections/electricity/sales/summary"
 .mb-3
   .d-flex.justify-content-between.align-items-center
@@ -13,11 +11,10 @@
         = link_to "#energy_sold", class: "nav-link active", data: { bs_toggle: "tab" } do
           %i.bi.bi-bar-chart-fill.me-1
           Energy Sold
-      -# - if latest_sale&.any_customer_type_data?
-      -#   %li.nav-item
-      -#     = link_to "#customer-breakdown", class: "nav-link", data: { bs_toggle: "tab" } do
-      -#       %i.bi.bi-pie-chart.me-1
-      -#       Customer Breakdown
+      -# %li.nav-item
+      -#   = link_to "#customer-breakdown", class: "nav-link", data: { bs_toggle: "tab" } do
+      -#     %i.bi.bi-pie-chart.me-1
+      -#     Customer Breakdown
       %li.nav-item
         = link_to "#sales-data", class: "nav-link", data: { bs_toggle: "tab" } do
           %i.bi.bi-table.me-1
@@ -28,6 +25,6 @@
   #energy_sold.tab-pane.fade.show.active
     = render "communities/sections/electricity/sales/energy_sold"
   -# #customer-breakdown.tab-pane.fade
-  -#   = render "communities/sections/electricity/sales/customer_breakdown", latest_sales: latest_sales, latest_year: latest_year
+  -#   = render "communities/sections/electricity/sales/customer_breakdown"
   #sales-data.tab-pane.fade
     = render "communities/sections/electricity/sales/data"
