--- a/app/views/communities/sections/background/population/_population_age_chart.html.haml
+++ b/app/views/communities/sections/background/population/_population_age_chart.html.haml
@@ -9,10 +9,14 @@
   data: {
     controller: "widget-update",
     widget_update: {
-      chart_id_value: chart_id,
-      chart_url_value: age_distribution_community_charts_path(@community),
-      base_title_value: base_title,
-      param_name_value: "end_year"
+      charts_value: [
+        { 
+          id: chart_id, 
+          url: age_distribution_community_charts_path(@community),
+          baseTitle: base_title,
+          param: "end_year"
+        }
+      ].to_json
     }
   }
 }
@@ -40,7 +44,7 @@
 
   = bar_chart age_distribution_community_charts_path(@community, end_year: selected_period.end_year),
     id:       chart_id,
-    title:    base_title,
+    title:    "#{base_title} (#{selected_end_year})",
     stacked:  true,
     xtitle:   "Population Count",
     ytitle:   "Age Group",
