--- a/app/views/communities/sections/electricity/production/_monthly.html.haml
+++ b/app/views/communities/sections/electricity/production/_monthly.html.haml
@@ -8,10 +8,14 @@
   data: {
     controller: "widget-update",
     widget_update: {
-      chart_id_value: chart_id,
-      chart_url_value: production_monthly_community_charts_path(@community),
-      param_name_value: "year",
-      base_title_value: base_title
+      charts_value: [
+        { 
+          id: chart_id, 
+          url: production_monthly_community_charts_path(@community),
+          baseTitle: base_title,
+          param: "year"
+        }
+      ].to_json
     }
   }
 }
@@ -27,7 +31,7 @@
           %option{ value: y, selected: y == selected_year }= y
 
   / Summary Frame: Targeted by the controller
-  %turbo-frame#monthly_generation_summary{ data: { widget_update_target: 'frame' }, src: monthly_generation_community_summary_path(@community, year: selected_year)}
+  %turbo-frame#monthly_generation_summary{ data: { widget_update_target: 'frame', param: 'year' }, src: monthly_generation_community_summary_path(@community, year: selected_year)}
     Loading summary ...
 
   / Chart: Updated by ID
