fix params and rubocop

--- a/app/views/communities/sections/electricity/production/_monthly.html.haml
+++ b/app/views/communities/sections/electricity/production/_monthly.html.haml
@@ -13,7 +13,7 @@
           id: chart_id, 
           url: production_monthly_community_charts_path(@community),
           baseTitle: base_title,
-          param: "year"
+          param: 'year'
         }
       ].to_json
     }
