--- a/app/views/communities/sections/electricity/_production.html.haml
+++ b/app/views/communities/sections/electricity/_production.html.haml
@@ -1,10 +1,10 @@
 .d-flex.align-items-center.mb-3
   %i.bi.bi-building-gear.me-2.fs-4
-  %h4#production.mb-0.me-3.py-3.anchor-offset Production
-  %hr.flex-grow-1.mt-1.mb-0
+  %h4#production.mb-0.me-2.py-3.anchor-offset Production
+  %hr.flex-grow-1.mt-1.mb-0.mx-2
+  = render "communities/sections/electricity/production/about_modal"
+
 .mb-3
-  = render 'communities/shared/plant_disclaimer', anchor: 'production'
-    
   .d-flex.justify-content-between.align-items-center
     .nav.nav-tabs
       - if @community.show_monthly_generation?
@@ -25,7 +25,6 @@
           = link_to "#yearly-prod-data", class: "nav-link", data: { bs_toggle: "tab" } do
             %i.bi.bi-table.me-1
             Yearly Data
-
 
   .tab-content.mt-3
     - if @community.show_monthly_generation?
