--- a/app/views/grids/sections/electricity/_capacity.html.haml
+++ b/app/views/grids/sections/electricity/_capacity.html.haml
@@ -1,11 +1,11 @@
 
 .d-flex.align-items-center.mb-3
   %i.bi.bi-lightning-fill.me-2.fs-4
-  %h4#capacity.mb-0.me-3.py-3 Capacity
-  %hr.flex-grow-1.mt-1.mb-0
+  %h4#capacity.mb-0.me-2.py-3.anchor-offset Capacity
+  %hr.flex-grow-1.mt-1.mb-0.mx-2
+  = render "grids/sections/electricity/capacity/about_modal"
+  
 .mb-3
-  = render 'grids/shared/plant_disclaimer', anchor: 'capacity'
-
   / Tabs
   .d-flex.align-items-center.mt-4
     .nav.nav-tabs
