--- a/app/views/grids/sections/electricity/_production.html.haml
+++ b/app/views/grids/sections/electricity/_production.html.haml
@@ -1,10 +1,9 @@
 .d-flex.align-items-center.mb-3
   %i.bi.bi-building-gear.me-2.fs-4
-  %h4#production.mb-0.me-3.py-3 Production
-  %hr.flex-grow-1.mt-1.mb-0
+  %h4#production.mb-0.me-2.py-3.anchor-offset Production
+  %hr.flex-grow-1.mt-1.mb-0.mx-2
+  = render "grids/sections/electricity/production/about_modal"
 .mb-3
-  = render 'grids/shared/plant_disclaimer', anchor: 'production'
-
   .d-flex.justify-content-between.align-items-center
     .nav.nav-tabs
       - if @grid.show_monthly_generation?
