adjust spacing for modals with one note

--- a/app/views/communities/sections/electricity/capacity/_about_modal.html.haml
+++ b/app/views/communities/sections/electricity/capacity/_about_modal.html.haml
@@ -11,7 +11,7 @@
         %h5#capacityInfoModalLabel.modal-title About Capacity Data
         %button.btn-close{ type: "button", data: { bs_dismiss: "modal" }, aria: { label: "Close" } }
       .modal-body
-        .d-flex.mb-4
+        .d-flex
           %i.bi.bi-geo-alt.text-primary.fs-4
           .flex-grow-1.ms-3
             %h6.fw-bold.mb-1 Service Area
