--- a/app/views/communities/sections/electricity/production/_about_modal.html.haml
+++ b/app/views/communities/sections/electricity/production/_about_modal.html.haml
@@ -12,26 +12,11 @@
         %button.btn-close{ type: "button", data: { bs_dismiss: "modal" }, aria: { label: "Close" } }
       .modal-body
         .d-flex.mb-4
-          %i.bi.bi-geo-alt.text-primary.fs-4
-          .flex-grow-1.ms-3
-            %h6.fw-bold.mb-1 Service Area
-            %p.text-muted.mb-1
-              This section displays data from power plants within this community’s
-              = @community.show_full_service_area? ? 'local service area.' : ' service area.'
-              
-            - if @community.grid
-              = link_to grid_path(@community.grid, anchor: 'production'),
-                class: "small text-decoration-none icon-link icon-link-hover d-inline-flex align-items-baseline gap-1",
-                data: { turbo: false } do
-                %span Explore Grid Data
-                %i.bi.bi-arrow-right
+          = render 'shared/modal/community_service_area'
       
         .d-flex
-          %i.bi.bi-file-earmark-bar-graph.text-secondary.fs-4
-          .flex-grow-1.ms-3
-            %h6.fw-bold.mb-1 Independent Power Producer (IPP) Reporting
-            %p.text-muted.mb-0
-              Information about power generation and type from IPPs is dependent on utilities power purchase reporting.
+          = render 'shared/modal/ipp_production'
+          
       .modal-footer
         %button.btn.btn-secondary{ type: "button", data: { bs_dismiss: "modal" } } Close
           
