--- a/app/views/grids/sections/electricity/production/_about_modal.html.haml
+++ b/app/views/grids/sections/electricity/production/_about_modal.html.haml
@@ -1,18 +1,21 @@
 -# 1. The Trigger Button
-%button.btn.btn-sm.btn-aedg-secondary.ms-2{ type: "button", data: { bs_toggle: "modal", bs_target: "#capacityInfoModal" } }
+%button.btn.btn-sm.btn-aedg-secondary.ms-2{ type: "button", data: { bs_toggle: "modal", bs_target: "#productionInfoModal" } }
   %i.bi.bi-info-circle.me-1
   About this Data
 
 -# 2. The Modal
-#capacityInfoModal.modal.fade{ tabindex: "-1", aria: { labelledby: "capacityInfoModalLabel" } }
+#productionInfoModal.modal.fade{ tabindex: "-1", aria: { labelledby: "productionInfoModalLabel" } }
   .modal-dialog.modal-dialog-centered
     .modal-content
       .modal-header
-        %h5#capacityInfoModalLabel.modal-title About Capacity Data
+        %h5#productionInfoModalLabel.modal-title About Production Data
         %button.btn-close{ type: "button", data: { bs_dismiss: "modal" }, aria: { label: "Close" } }
       .modal-body
+        .d-flex.mb-4
+          = render 'shared/modal/grid_plant_connection'
+
         .d-flex
-          = render 'grids/shared/modal/plant_connection'
+          = render 'shared/modal/ipp_production'
               
       .modal-footer
         %button.btn.btn-secondary{ type: "button", data: { bs_dismiss: "modal" } } Close
