--- a/app/views/metadata/index.html.haml
+++ b/app/views/metadata/index.html.haml
@@ -4,26 +4,21 @@
   .row.justify-content-center.mb-5
     .col
       #explore-data-hero.position-relative.text-center.rounded-4.p-0.p-md-3.p-lg-5
-        .container-fluid
-          .row.justify-content-center
-            .col-12.col-md-11.col-lg-10.bg-white.bg-opacity-75.p-4.rounded-4.shadow
-              %h1.fw-bold.m-3
-                %i.bi.bi-search.me-2
-                Explore Data
-  
-              %p.lead.fs-5.w-75.mx-auto.mb-4
-                Explore energy and socioeconomic datasets from across Alaska. Built to support researchers, policymakers, and the public.
-
-              .d-flex.flex-column.flex-sm-row.justify-content-center.align-items-center.gap-3.mb-4
-                = link_to "#{Community.count} Communities", communities_path, class: "btn btn-lg btn-aedg-primary"
-                = link_to "View All Datasets", search_metadata_path, class: "btn btn-lg btn-aedg-secondary"
-
-              .row.justify-content-center
-                .col.col-lg-10
-                  = render 'search_form', simple: true
+        .row.justify-content-center.mx-0
+          .col-12.col-md-11.col-lg-10.bg-white.bg-opacity-75.p-4.rounded-4.shadow.position-relative
+            %h1.fw-bold.m-3
+              %i.bi.bi-search.me-2
+              Explore Data
+            %p.lead.fs-5.w-75.mx-auto.mb-4
+              Explore energy and socioeconomic datasets from across Alaska. Built to support researchers, policymakers, and the public.
+            .d-flex.flex-column.flex-sm-row.justify-content-center.align-items-center.gap-3.mb-4
+              = link_to "#{Community.count} Communities", communities_path, class: "btn btn-lg btn-aedg-primary"
+              = link_to "View All Datasets", search_metadata_path, class: "btn btn-lg btn-aedg-secondary"
+            .row.justify-content-center
+              .col.col-lg-10
+                = render 'search_form', simple: true
       .text-end.text-small.text-muted.mt-2
         Photo Credit: Gwen Holdmann
-
 
 .row.g-5.mb-5.mx-0
   - if FeatureFlag.enabled?(:show_by_theme)
