--- a/app/views/metadata/_metadata.html.haml
+++ b/app/views/metadata/_metadata.html.haml
@@ -11,7 +11,7 @@
     %p.text-muted= metadatum.description
 
     - metadatum.keywords.each do |tag|
-      %span.badge.bg-secondary.me-1.mb-1.text-capitalize= tag
+      %span.badge.bg-secondary.mx-1.text-capitalize= tag
 
   .border-top.px-3.py-2.d-flex.justify-content-between.align-items-center
     .text-muted.small Last Updated: #{metadatum.updated_at}
