--- a/app/views/searches/advanced/_community_card.html.haml
+++ b/app/views/searches/advanced/_community_card.html.haml
@@ -15,22 +15,22 @@
             = g.name
 
       - if (b = community.borough).present?
-        %span.badge.bg-secondary.me-1.mb-1.text-capitalize
+        %span.badge.bg-secondary.mx-1.text-capitalize
           = b.name
 
       - if (rc = community.regional_corporation).present?
-        %span.badge.bg-secondary.me-1.mb-1.text-capitalize
+        %span.badge.bg-secondary.mx-1.text-capitalize
           = rc.name
 
       - if community.respond_to?(:senate_districts)
         - community.senate_districts.each do |d|
-          %span.badge.bg-secondary.me-1.mb-1.text-capitalize
+          %span.badge.bg-secondary.mx-1.text-capitalize
             %i.bi.bi-bank.me-1
             = "Senate District #{d.district || d}"
 
       - if community.respond_to?(:house_districts)
         - community.house_districts.each do |d|
-          %span.badge.bg-secondary.me-1.mb-1.text-capitalize
+          %span.badge.bg-secondary.mx-1.text-capitalize
             %i.bi.bi-house.me-1
             - label = d.respond_to?(:name) && d.name.present? ? d.name : "House District #{d.district || d}"
             = label
