aligned language and made user friendly

--- a/app/views/grids/index.html.haml
+++ b/app/views/grids/index.html.haml
@@ -12,8 +12,8 @@
             %p.lead.fs-5.w-75.mx-auto.mb-4
               Explore grid-level insights, from communities served to energy metrics.
             .d-flex.flex-column.flex-sm-row.justify-content-center.align-items-center.gap-3.mb-4
-              = link_to "#{Community.count} Communities", communities_path, class: "btn btn-lg btn-aedg-primary"
-              = link_to "Datasets", search_metadata_path, class: "btn btn-lg btn-aedg-secondary"
+              = link_to "View Data Explorer", search_metadata_path, class: "btn btn-lg btn-aedg-primary"
+              = link_to "Advanced Search", search_advanced_path, class: "btn btn-lg btn-aedg-secondary"
       -# Photo Credit
       .text-end.text-small.text-muted.mt-2
         Photo Credit: Gwen Holdmann
