--- a/app/views/searches/advanced.html.haml
+++ b/app/views/searches/advanced.html.haml
@@ -12,7 +12,7 @@
     / ==== LEFT: FILTERS PANEL (Sticky Sidebar) ====
     .col-md-4
       .mb-4.position-sticky.top-0.py-3
-        %h2.fw-bold.mb-1  Advanced Community Explorer
+        %h2.fw-bold.mb-1  Community Explorer
         %p.text-muted Filter communities by specific criteria below.
         = render 'searches/advanced/form'
 
