--- a/app/views/communities/index.html.haml
+++ b/app/views/communities/index.html.haml
@@ -13,8 +13,8 @@
             %p.lead.fs-5.w-75.mx-auto.mb-4
               Browse and search through communities across Alaska.
             .d-flex.flex-column.flex-sm-row.justify-content-center.align-items-center.gap-3.mb-4
-              = link_to "Datasets", search_metadata_path, class: "btn btn-lg btn-aedg-primary"
-              = link_to "Advanced Explorer", search_advanced_path, class: "btn btn-lg btn-aedg-secondary"
+              = link_to "View Data Explorer", search_metadata_path, class: "btn btn-lg btn-aedg-primary"
+              = link_to "Advanced Search", search_advanced_path, class: "btn btn-lg btn-aedg-secondary"
             .row.justify-content-center
               .col.col-lg-10
                 = render 'simple_search'
