--- a/app/views/grids/index.html.haml
+++ b/app/views/grids/index.html.haml
@@ -19,18 +19,7 @@
         Photo Credit: Gwen Holdmann
 
 -# Main Content / Results Section
-- if @grids.blank?
-  .text-center.mt-5
-    %i.bi.bi-search.display-4.text-muted.mb-3
-    %p.lead.text-secondary No grids found matching your search.
-
-- else
-  .row.justify-content-center.g-5.mb-5.mx-0
-    .col-xl-8.mt-0
-      = turbo_frame_tag 'grids' do
-        .row.g-2
-          - @grids.each do |grid|
-            .col-6.col-sm-4.col-ls-2
-              = link_to grid.name, grid_path(grid),
-                class: "btn btn-light border w-100 h-100 shadow-sm d-flex align-items-center justify-content-center text-wrap",
-                data: { turbo_frame: '_top' }
+.row.justify-content-center.g-5.mb-5.mx-0
+  .col-xl-8.mt-0
+    = turbo_frame_tag 'grids' do
+      = render 'grids_list', grids: @grids
