remove explore infront of communities and girds so its more obvious what page the user is on.

--- a/app/views/communities/index.html.haml
+++ b/app/views/communities/index.html.haml
@@ -9,7 +9,7 @@
           .col-12.col-md-11.col-lg-10.bg-white.bg-opacity-75.p-4.rounded-4.shadow.position-relative
             %h1.fw-bold.m-3
               %i.bi.bi-people.me-2
-              Explore Communities
+              Communities
             %p.lead.fs-5.w-75.mx-auto.mb-4
               Browse and search through communities across Alaska.
             .d-flex.flex-column.flex-sm-row.justify-content-center.align-items-center.gap-3.mb-4
