--- a/app/views/grids/index.html.haml
+++ b/app/views/grids/index.html.haml
@@ -8,7 +8,7 @@
           .col-12.col-md-11.col-lg-10.bg-white.bg-opacity-75.p-4.rounded-4.shadow.position-relative
             %h1.fw-bold.m-3
               %i.bi.bi-grid.me-2
-              Explore Grids
+              Grids
             %p.lead.fs-5.w-75.mx-auto.mb-4
               Explore grid-level insights, from communities served to energy metrics.
             .d-flex.flex-column.flex-sm-row.justify-content-center.align-items-center.gap-3.mb-4
